deploy: 09a5b8d6a2cb35f1d1ae046f6dcef081c90895eb

--- a/index.html
+++ b/index.html
@@ -22,6 +22,29 @@ Documentation of libs
 <li><a href=Utils/Systemd.html>Utils/Systemd.pm</a></li>
 <li><a href=YaST/Module.html>YaST/Module.pm</a></li>
 <li><a href=YaST/NetworkSettings/AbstractNetworkSettingsController.html>YaST/NetworkSettings/AbstractNetworkSettingsController.pm</a></li>
+<li><a href=YuiRestClient.html>YuiRestClient.pm</a></li>
+<li><a href=YuiRestClient/Action.html>YuiRestClient/Action.pm</a></li>
+<li><a href=YuiRestClient/App.html>YuiRestClient/App.pm</a></li>
+<li><a href=YuiRestClient/Filter.html>YuiRestClient/Filter.pm</a></li>
+<li><a href=YuiRestClient/Http/HttpClient.html>YuiRestClient/Http/HttpClient.pm</a></li>
+<li><a href=YuiRestClient/Http/WidgetController.html>YuiRestClient/Http/WidgetController.pm</a></li>
+<li><a href=YuiRestClient/Logger.html>YuiRestClient/Logger.pm</a></li>
+<li><a href=YuiRestClient/Sanitizer.html>YuiRestClient/Sanitizer.pm</a></li>
+<li><a href=YuiRestClient/Wait.html>YuiRestClient/Wait.pm</a></li>
+<li><a href=YuiRestClient/Widget/Base.html>YuiRestClient/Widget/Base.pm</a></li>
+<li><a href=YuiRestClient/Widget/Button.html>YuiRestClient/Widget/Button.pm</a></li>
+<li><a href=YuiRestClient/Widget/CheckBox.html>YuiRestClient/Widget/CheckBox.pm</a></li>
+<li><a href=YuiRestClient/Widget/ComboBox.html>YuiRestClient/Widget/ComboBox.pm</a></li>
+<li><a href=YuiRestClient/Widget/ItemSelector.html>YuiRestClient/Widget/ItemSelector.pm</a></li>
+<li><a href=YuiRestClient/Widget/Label.html>YuiRestClient/Widget/Label.pm</a></li>
+<li><a href=YuiRestClient/Widget/MenuCollection.html>YuiRestClient/Widget/MenuCollection.pm</a></li>
+<li><a href=YuiRestClient/Widget/RadioButton.html>YuiRestClient/Widget/RadioButton.pm</a></li>
+<li><a href=YuiRestClient/Widget/RichText.html>YuiRestClient/Widget/RichText.pm</a></li>
+<li><a href=YuiRestClient/Widget/SelectionBox.html>YuiRestClient/Widget/SelectionBox.pm</a></li>
+<li><a href=YuiRestClient/Widget/Tab.html>YuiRestClient/Widget/Tab.pm</a></li>
+<li><a href=YuiRestClient/Widget/Table.html>YuiRestClient/Widget/Table.pm</a></li>
+<li><a href=YuiRestClient/Widget/Textbox.html>YuiRestClient/Widget/Textbox.pm</a></li>
+<li><a href=YuiRestClient/Widget/Tree.html>YuiRestClient/Widget/Tree.pm</a></li>
 <li><a href=apachetest.html>apachetest.pm</a></li>
 <li><a href=apparmortest.html>apparmortest.pm</a></li>
 <li><a href=autofs_utils.html>autofs_utils.pm</a></li>
