--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ Documentation of libs
 <li><a href=publiccloud/aws.html>publiccloud/aws.pm</a></li>
 <li><a href=publiccloud/azure.html>publiccloud/azure.pm</a></li>
 <li><a href=publiccloud/ecr.html>publiccloud/ecr.pm</a></li>
+<li><a href=publiccloud/gcp.html>publiccloud/gcp.pm</a></li>
 <li><a href=publiccloud/instance.html>publiccloud/instance.pm</a></li>
 <li><a href=publiccloud/k8sbasetest.html>publiccloud/k8sbasetest.pm</a></li>
 <li><a href=publiccloud/provider.html>publiccloud/provider.pm</a></li>
