--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ Documentation of libs
 <li><a href=partition_setup.html>partition_setup.pm</a></li>
 <li><a href=power_action_utils.html>power_action_utils.pm</a></li>
 <li><a href=publiccloud/acr.html>publiccloud/acr.pm</a></li>
+<li><a href=publiccloud/aks.html>publiccloud/aks.pm</a></li>
 <li><a href=publiccloud/aws_client.html>publiccloud/aws_client.pm</a></li>
 <li><a href=publiccloud/azure.html>publiccloud/azure.pm</a></li>
 <li><a href=publiccloud/azure_client.html>publiccloud/azure_client.pm</a></li>
